--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="en" dir="ltr">
@@ -35,3 +36,57 @@
     <p class="lead"; style="background-color:#ffffff;opacity: 0.7;"></p>
     <p style="background-color:#ffffff;opacity: 0.7;">One User Account for All</p>
     <a href="/student/studentsignup" class="btn btn-secondary"<i class="btn btn-secondary" aria-hidden="true"></i> Sign Up</a>
+
+</div>
+</section>
+  <br>
+  <br>
+  <br>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+<head>
+
+  <style>
+    footer {
+      padding: 0px 0px 0px 0px;
+      background-color: #212529;
+      margin: 0px;
+      height: 110px;
+    }
+
+    .fa {
+      padding: 50px;
+      font-size: 23px;
+      width: 10px;
+      text-align: center;
+      text-decoration: none;
+      margin: 5px 2px;
+      border-radius: 50%;
+    }
+        p {
+      text-align: center;
+
+    }
+  </style>
+</head>
+
+<footer>
+
+  <br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-sm-45">
+        <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
+          <p>Created By <br>
+            Team Influencers </p><br>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+</body>
+
+</html>
